--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.7.3",
     "axios": "^1.6.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
