PiniaApp: json server command + README

--- a/PiniaApp/package.json
+++ b/PiniaApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "backend-server": "json-server --watch ./db/db.json --port 3001",
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
